# Django-with-roles-permissioin-and-groups

./: LICENSE  README.md  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py  development.py
core/: __init__.py  apps.py  jwt_manager.py  permissions.py  schema.py  signals.py  utils.py  views.py
router/: api_router.py
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_book_author.py
